test/test_suite/errors/expect_type_typos.c3
fn void main()
{
	ptr p; // #error: Expected a type here. Did you perhaps want 'iptr' or 'uptr'?
}
